Lab 2: add spy