@@ -20,6 +20,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'
     testRuntimeOnly  'org.junit.jupiter:junit-jupiter-engine:5.10.2'
     testRuntimeOnly  'org.junit.platform:junit-platform-launcher:1.10.2'
+    testImplementation "org.mockito:mockito-core:5.12.0"
+    testImplementation "org.mockito:mockito-junit-jupiter:5.12.0"
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -28,6 +30,8 @@ tasks.withType(JavaCompile).configureEach {
 
 test {
     useJUnitPlatform()
+
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
 
     testLogging {
         events "passed", "skipped", "failed"
